# scribe-wise

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
PRD/: model-selection-system.md  webm-to-mp3-transcription.md
cli/: integration.py  main.py
config/: __init__.py  model_config.py
converters/: media_converter.py
exceptions/: __init__.py  base.py  conversion.py  transcription.py  validation.py
services/: __init__.py  base.py  local_breeze.py  local_whisper.py  openai_service.py
tests/: test_audio_validator.py  test_base_service.py  test_cli_integration.py  test_cli_model_selection.py  test_error_recovery.py  test_exceptions.py  test_ffmpeg_checker.py  test_file_detector.py  test_local_breeze_service.py  test_local_whisper_service.py  test_main_cli.py  test_media_converter.py  test_model_config.py  test_openai_service.py  test_performance_monitor.py  test_platform_compatibility.py  test_transcription_workflow.py  test_workflow_error_integration.py  test_workflow_model_integration.py
transcription/: workflow.py
utils/: error_recovery.py  ffmpeg_checker.py  file_detector.py  performance_monitor.py  platform_compatibility.py
validators/: audio_validator.py
